--- a/lookup/templates/base.html
+++ b/lookup/templates/base.html
@@ -9,6 +9,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <title>Hello, world!</title>
+
+    <style>
+      .good {background-color: #00e400;}
+      .moderate {background-color: #ffff00 ;}
+      .usg {background-color: #ff7e00 ;}
+      .unhealthy {background-color: #ff0000 ;}
+      .veryunhealthy {background-color: #8f3f97 ;}
+      .hazardous {background-color: #7e0023 ;}
+    </style>
   </head>
   <body>
 
@@ -27,9 +36,10 @@
         
       
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-secondary" type="submit">Search</button>
+      <form action = "{% url 'home' %}" class="d-flex" method = "POST">
+          {% csrf_token %}
+        <input class="form-control me-2" type="search" placeholder="Enter Zipcode" aria-label="Search" name="zipcode">
+        <button class="btn btn-outline-secondary" type="submit">Lookup</button>
       </form>
     </div>
   </div>
